RESOLVED FIXED237138
[IFC][Integration] verticalLogicalMargin returns incorrect values for vertical-rl
https://bugs.webkit.org/show_bug.cgi?id=237138
Summary [IFC][Integration] verticalLogicalMargin returns incorrect values for vertica...
alan
Reported 2022-02-24 08:32:59 PST
ssia
Attachments
Patch (2.27 KB, patch)
2022-02-24 08:35 PST, alan
no flags
alan
Comment 1 2022-02-24 08:35:39 PST
EWS
Comment 2 2022-02-24 09:20:40 PST
Committed r290437 (247740@main): <https://commits.webkit.org/247740@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453101 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-24 09:21:38 PST
Jon Lee
Comment 4 2022-02-25 13:52:32 PST
Seems like this progressed fast/writing-mode/vertical-align-flexbox-baseline.html on iOS.
alan
Comment 5 2022-02-25 14:01:38 PST
(In reply to Jon Lee from comment #4) > Seems like this progressed > fast/writing-mode/vertical-align-flexbox-baseline.html on iOS. That's surprising since this only changed vertical-rl behavior (and the test is about writing-mode: vertical-lr;)
Note You need to log in before you can comment on or make changes to this bug.