[IFC][Integration] verticalLogicalMargin returns incorrect values for vertical-rl https://bugs.webkit.org/show_bug.cgi?id=237138

Reviewed by Antti Koivisto.

This was caused by an accidental copy/paste.

* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::verticalLogicalMargin): also switch over to "switch".



Canonical link: https://commits.webkit.org/247740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290437 268f45cc-cd09-0410-ab3c-d52691b4dbfc